sfdx-spa-alcala/force-app/main/default/objects/Student_Subject_Grade__c/Student_Subject_Grade__c.object-meta.xml
<CustomObject>
    <label>Student Subject Grade</label>
    <nameField>
        <displayFormat>SG - {000000}</displayFormat>
        <label>Student Subject Grade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Subject Grades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>