sfdx-spa-alcala/force-app/main/default/objects/Student_Subject_Grade__c/fields/Final_Rating__c.field-meta.xml
<CustomField>
    <fullName>Final_Rating__c</fullName>
    <label>Final Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>