sfdx-spa-alcala/force-app/main/default/objects/Student_Subject_Grade__c/fields/Q2_Rating__c.field-meta.xml
<CustomField>
    <fullName>Q2_Rating__c</fullName>
    <label>Q2 Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>