sfdx-spa-alcala/force-app/main/default/objects/Student_Subject_Grade__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Subject Grades (Student)</relationshipLabel>
    <relationshipName>Student_Subject_Grades1</relationshipName>
    <type>Lookup</type>
</CustomField>