sfdx-spa-alcala/force-app/main/default/objects/Student_Subject_Grade__c/fields/Student_Year_Semester__c.field-meta.xml
<CustomField>
    <fullName>Student_Year_Semester__c</fullName>
    <label>Student Year/Semester</label>
    <referenceTo>Student_Year_Semester__c</referenceTo>
    <relationshipLabel>Student Subject Grades</relationshipLabel>
    <relationshipName>Student_Subject_Grades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>