sfdx-spa-alcala/force-app/main/default/objects/Student_Subject_Grade__c/fields/Teacher_Subject__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Subject__c</fullName>
    <label>Teacher Subject</label>
    <referenceTo>Teacher_Subject__c</referenceTo>
    <relationshipLabel>Student Subject Grades</relationshipLabel>
    <relationshipName>Student_Subject_Grades</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>